--- a/package.json
+++ b/package.json
@@ -20,14 +20,26 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/router": "^6.1.1",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/file": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
-    "@ionic-native/status-bar": "~4.10.0",
+    "@ionic-native/status-bar": "^4.10.1",
+    "@ionic/lab": "^1.0.2",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^2.0.0-beta.7-pre",
+    "cordova-browser": "5.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.3.0",
     "ionic-angular": "3.9.2",
+    "ionic-gallery-modal": "^0.2.7",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -37,5 +49,19 @@
     "@ionic/app-scripts": "3.1.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-file": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {}
+    },
+    "platforms": [
+      "browser"
+    ]
+  }
 }
